k8s/Manifests/backend-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcare-backend
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: healthcare-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthcare-backend
    spec:
      containers:
        - name: backend
          image: healthcare-backend:latest
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
