k8s/Manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-backend
  namespace: healthcare
  labels:
    app.kubernetes.io/name: healthcare-backend
spec:
  selector:
    app.kubernetes.io/name: healthcare-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
