k8s/Manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-frontend
  namespace: healthcare
spec:
  selector:
    app.kubernetes.io/name: healthcare-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
