k8s/Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-booking
  namespace: healthcare
spec:
  rules:
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: healthcare-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthcare-frontend
                port:
                  number: 80
